--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#1976D2</color>
-    <color name="colorPrimaryDark">#1565C0</color>
-    <color name="colorPrimaryLight">#1E88E5</color>
+    <color name="colorPrimary">#f83d50</color>
+    <color name="colorPrimaryDark">#AE2C39</color>
+    <color name="colorPrimaryLight">#EC7C88</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorAccentDark">#F50057</color>
     <color name="colorAccentLight">#FF80AB</color>
