--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
             android:layout_height="77dp"
             android:layout_marginTop="93dp"
             android:layout_gravity="center_horizontal"
-            android:src="@drawable/ic_icon"/>
+            android:src="@drawable/icon"/>
 
     </FrameLayout>
 
