--- a/app/src/main/res/layout/fragment_local.xml
+++ b/app/src/main/res/layout/fragment_local.xml
@@ -17,7 +17,7 @@
             android:layout_height="77dp"
             android:layout_marginTop="93dp"
             android:layout_gravity="center_horizontal"
-            android:src="@drawable/ic_icon"/>
+            android:src="@drawable/icon"/>
 
     </FrameLayout>
 
